--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
 </head>
 <body>
     
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src="logo.png" alt="" id="header-img"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#">Order Now</a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
 </body>
 </html>
