--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     
-    <section class="header">
+    <div class="header">
+        <!-- Hedear Part With Nav -->
         <nav>
             <a href="index.html"><img src="logo.png" alt="" id="header-img"></a>
             <div class="nav-links">
@@ -19,6 +20,16 @@
                 </ul>
             </div>
         </nav>
-    </section>
+        <div class="header-info">
+            <h1>Welcome To Zumatu <br> Find All Food Here</h1>
+            <a href="">Order Food Now</a>
+        </div>
+
+        <div class="header-img">
+            <img src="svg/herobgpattren.svg" alt="">
+            <img src="svg/heroShape.svg" alt="">
+            <img src="hero.jpg" alt="" style="height: 440px; margin-bottom: 80px; border-radius: 8%;">
+        </div>
+    </div>
 </body>
 </html>
