added menu section 1

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zumatu</title>
+    <title>Zomato</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -21,7 +21,7 @@
             </div>
         </nav>
         <div class="header-info">
-            <h1>Welcome To Zumatu <br> Find All Food Here</h1>
+            <h1>Welcome To Zomato <br> Find All Food Here</h1>
             <a href="">Order Food Now</a>
         </div>
 
@@ -33,10 +33,30 @@
     </section>
 
     <section class="intro-video">
+        <!-- Intro video section -->
         <div class="video">
             <iframe src="https://player.vimeo.com/video/323795266" width="1000px" height="500px" allowfullscreen=""></iframe>
         </div>
         <h1>At Zomato, We Have the Best Chefs around the world to make the most delicious food you crave for</h1>
+    </section>
+
+    <section class="menu">
+        <h1>Delicious Range of Menus</h1>
+        <!-- Using Flex -->
+        <div class="row">
+            <div class="menu-item">
+                <img src="pizza.jpg" alt="">
+                <h3>Delicious Pizza from Dominoz and Pizza Hut</h3>
+            </div>
+            <div class="menu-item">
+                <img src="burger.jpg" alt="">
+                <h3>Exciting Range of burgers from top brands</h3>
+            </div>
+            <div class="menu-item">
+                <img src="iceCream.jpg" alt="">
+                <h3>Deserts from Kwality Wall's and Vadilal</h3>
+            </div>
+        </div>
     </section>
 </body>
 </html>
