--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <div class="row">
             <div class="menu-item">
                 <img src="pizza.jpg" alt="">
-                <h3>Delicious Pizza from Dominoz and Pizza Hut</h3>
+                <h3>Delicious Pizza from Dominoz and Pizza Hut <br>Staring From Rs 120/-</h3>
             </div>
             <div class="menu-item">
                 <img src="burger.jpg" alt="">
-                <h3>Exciting Range of burgers from top brands</h3>
+                <h3>Exciting Range of burgers from top brands <br>Starting From Rs 70/-</h3>
             </div>
             <div class="menu-item">
                 <img src="iceCream.jpg" alt="">
-                <h3>Deserts from Kwality Wall's and Vadilal</h3>
+                <h3>Deserts from Kwality Wall's and Vadilal <br>Starting From Rs 50/-</h3>
             </div>
         </div>
     </section>
