adding next part

--- a/index.html
+++ b/index.html
@@ -58,5 +58,18 @@
             </div>
         </div>
     </section>
+
+    <section class="restutant-list">
+        <div class="header-info">
+            <h1 style="font-size: 40px;">Order From 100+ Resturants <br>Across India</h1>
+        </div>
+
+        <div class="restaurant-img">
+            <div><img src="restaurant1.jpg" alt=""></div>
+            <div><img src="restaurant2.jpg" alt=""></div>
+            <div><img src="restaurant3.jpg" alt=""></div>
+            <div><img src="restaurant4.jpg" alt=""></div>
+        </div>
+    </section>
 </body>
 </html>
