added restaurant list

--- a/index.html
+++ b/index.html
@@ -60,15 +60,22 @@
     </section>
 
     <section class="restutant-list">
-        <div class="header-info">
-            <h1 style="font-size: 40px;">Order From 100+ Resturants <br>Across India</h1>
-        </div>
-
         <div class="restaurant-img">
-            <div><img src="restaurant1.jpg" alt=""></div>
-            <div><img src="restaurant2.jpg" alt=""></div>
-            <div><img src="restaurant3.jpg" alt=""></div>
-            <div><img src="restaurant4.jpg" alt=""></div>
+            <div class="row-res">
+                <div class="res-total">
+                    <p style="font-size: 40px;">Order From 100+ Resturants <br>Across India</p>
+                </div>
+                <div class="res-img">
+                    <div class="top-img">
+                        <img src="restaurant1.jpg" alt="" width="500px" height="180px">
+                        <img src="restaurant2.jpg" alt="" width="260px" height="230px">
+                    </div>
+                    <div class="bottom-img">
+                        <img src="restaurant3.jpg" alt="" width="290px" height="200px">
+                        <img src="restaurant4.jpg" alt="" width="500px" height="180px">
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
