--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
                 </div>
             </div>
         </div>
+        <h1 style="justify-content: center; text-align: center; width: 100%; margin-top: 50px; font-size: 30px;">Subscribe To Our Newletter To Stay Updated</h1><br>
+        <div>
+            <form id="form"> 
+                <input type="search" id="query" name="email" placeholder="example@example.com">
+                <button>Subscribe</button>
+              </form>
+        </div>
+    </section>
+
+    <section class="ran">       
+        <h1>At Zomato Our Moto is to solve the problem with hunger</h1>
+    </section>
+
+    <!-- Footer Section -->
+    <section class="footer">   
+        
+        <p>Made By Pratik Das</p>
     </section>
 </body>
 </html>
